Fix text fade effect: Replace visible blocks with smooth CSS mask-image gradient

--- a/public/assets/scss/elements/_banner.scss
+++ b/public/assets/scss/elements/_banner.scss
@@ -1202,6 +1202,16 @@
     text-align: center;
     font-family: var(--font-primary);
     font-weight: 700;
+    -webkit-mask-image: linear-gradient(90deg,
+      transparent 0%,
+      black 15%,
+      black 85%,
+      transparent 100%);
+    mask-image: linear-gradient(90deg,
+      transparent 0%,
+      black 15%,
+      black 85%,
+      transparent 100%);
     @media (min-width: 576px) {
       font-size: 48px;
       line-height: 1.25;
@@ -1212,6 +1222,16 @@
     @media #{variables.$sm-layout} {
       font-size: 25px;
       line-height: 1.5;
+      -webkit-mask-image: linear-gradient(90deg,
+        transparent 0%,
+        black 10%,
+        black 90%,
+        transparent 100%);
+      mask-image: linear-gradient(90deg,
+        transparent 0%,
+        black 10%,
+        black 90%,
+        transparent 100%);
     }
     span {
       color: var(--color-primary);
@@ -1219,31 +1239,11 @@
   }
 
   .right-bg-text-para {
-    position: absolute;
-    right: -150px;
-    top: 0;
     display: none;
-    pointer-events: none;
-    @media (min-width: 1200px) {
-      display: block;
-    }
-    @media #{variables.$laptop-device} {
-      right: 0;
-    }
   }
 
   .left-bg-text-para {
-    position: absolute;
-    left: -150px;
-    top: 0;
     display: none;
-    pointer-events: none;
-    @media (min-width: 1200px) {
-      display: block;
-    }
-    @media #{variables.$laptop-device} {
-      left: 0;
-    }
   }
 }
 
